* FormPanel: No more AWT listener (causes slowdown) + Parameter panel: Copy/paste